2004-11-19  Nick Clifton  <nickc@redhat.com>

	* ld-scripts/script.exp: Add test of memory linker script.
	Reorganise code to remove unnecessary indentation.
	Fix target tests to avoid using --image-base with *-nto targets.
	* ld-scripts/memory.t: New linker script to test the MEMORY
	section and the ORIGIN and LENGTH operators.

2004-11-17  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-arm/mixed-app.d, ld-arm/mixed-app.r, ld-arm/mixed-app.s,
	ld-arm/mixed-app.sym, ld-arm/mixed-lib.d, ld-arm/mixed-lib.r,
	ld-arm/mixed-lib.s, ld-arm/mixed-lib.sym, ld-arm/arm-dyn.ld,
	ld-arm/arm-lib.ld: New files.
	* ld-arm/arm-app-abs32.d, ld-arm/arm-app-abs32.r, ld-arm/arm-app.d,
	ld-arm/arm-app.r, ld-arm/arm-lib-plt32.d, ld-arm/arm-lib-plt32.r,
	ld-arm/arm-lib.d, ld-arm/arm-lib.r, ld-arm/arm-static-app.d,
	ld-arm/arm-static-app.r: Update for big-endian.
	* ld-arm/arm-elf.exp: Run the new tests.

2004-11-16  Richard Sandiford  <rsandifo@redhat.com>

	* ld-mips-elf/eh-frame1.{s,ld},
	* ld-mips-elf/eh-frame1-{n32,n64},d: New test.
	* ld-mips-elf/mips-elf.exp: Run it.

2004-11-10  Alan Modra  <amodra@bigpond.net.au>

	* ld-d10v/reloc-003.d: Update for changed error message.
	* ld-d10v/reloc-004.d: Likewise.
	* ld-d10v/reloc-007.d: Likewise.
	* ld-d10v/reloc-008.d: Likewise.
	* ld-d10v/reloc-011.d: Likewise.
	* ld-d10v/reloc-012.d: Likewise.
	* ld-d10v/reloc-015.d: Likewise.
	* ld-d10v/reloc-016.d: Likewise.

2004-11-08  Inderpreet Singh   <inderpreetb@nioda.hcltech.com>
	    Vineet Sharma      <vineets@noida.hcltech.com>

	* ld-maxq: New directory.  Contains tests for the new maxq port.

2004-11-04  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-elf/merge.d: xfail crisv32-*-*.
	* ld-cris/dsov32-1.s, ld-cris/dsov32-2.s, ld-cris/dsov32-3.s,
	ld-cris/dsov32-4.s, ld-cris/libdso-10.d, ld-cris/libdso-11.d,
	ld-cris/libdso-12.d, ld-cris/libdso-13.d, ld-cris/libdso-14.d,
	ld-cris/move-1.s, ld-cris/pv32-1.d, ld-cris/pv32.s,
	ld-cris/start1.s, ld-cris/v10-v32.d, ld-cris/v10-va.d,